delete method(file)
